test/files/errors/mismatchoperationLoop.jg
_main int () {
    
    (0 + 5 * 7) while { # Infinite loop
        "Lol" print;
    }
    0 return;
}